--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,8 +1,9 @@
 .container{
-    width: 710px
+    width: 710px;
 }
 
 body{
+    width: 710px;
     background: #cff;
 }
 
@@ -83,4 +84,15 @@ a.signup_button{
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
     border-radius: 10px;
+}
+/*Footer*/
+footer{
+    text-align: center;
+    margin-top: 10px;
+    width: 710px;
+    margin-left: auto;
+    margin-right: auto;
+}
+footer nav{
+    float: none;
 }
